--- a/core/templates/order_summary.html
+++ b/core/templates/order_summary.html
@@ -47,7 +47,7 @@
         {% if object.coupon %}
         <tr>
           <td colspan="4" ><b>Coupon</b></td>
-          <td><b>${{ object.coupon.amount }}</b></td>
+          <!-- <td><b>${{ object.coupon.amount }}</b></td> -->
         </tr>
         {% endif %}
         {% if object.get_total %}
