Default adresses managemnt

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -82,5 +82,7 @@
         // Animations initialization
         new WOW().init();
   </script>
+  {% block extra_scripts %}
+  {% endblock extra_scripts %}
 </body>
 </html>
