--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,7 @@
     {% block extra_head %}
     {% endblock %}
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -28,6 +29,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+
+    {% block style %}
+    {% endblock style %}
 </head>
 <body>
     <!-- <div class="mt-5 pt-4">
