--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,6 +11,7 @@
     {% endblock %}
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -27,6 +28,9 @@
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+
+    <link rel="stylesheet" href="{% static 'css/Shopping_cart_style.css' %}">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
 
@@ -69,7 +73,7 @@
     <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
     <script src="{% static 'js/aos.js' %}"></script>
     <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
-    
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
     {% block extra_scripts %}
     {% endblock extra_scripts %}
